# HAFA

./: .gitattributes  .gitignore  Cargo.toml  LEGAL.md  README.md  WHITEPAPER.md  dashboard.html  data.txt  start.bat  start.sh  test_data.txt
src/: api.rs  blockchain.rs  config.rs  crypto.rs  data_source.rs  epistemic.rs  evolution.rs  learning.rs  lib.rs  main.rs  network.rs  wallet.rs
src/learning_v3/: accelerated.rs  attention.rs  backend.rs  checkpoint.rs  cognitive_proof.rs  dataset_stream.rs  embedding.rs  gradient_bucket.rs  knowledge_graph.rs  knowledge_graph_storage.rs  loss.rs  mod.rs  proof_verifier.rs  reasoning_engine.rs  scheduler.rs  telemetry.rs  tensor.rs  trainer.rs  trainer_v4.rs  training_metrics.rs  transformer.rs  wgpu_backend.rs
src/learning_v3/auto_learning/: blockchain_source.rs  curiosity.rs  data_source.rs  engine.rs  episodic_memory.rs  gossipsub_source.rs  learning_network.rs  learning_protocol.rs  mod.rs  web_source.rs
src/learning_v3/optimizers/: adamw.rs  mod.rs
web/: index.html
web/css/: style.css
web/js/: api.js  app.js  dashboard.js
